// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree demo -- base 1`] = `
.emotion-18 {
  background: transparent;
  color: #0a1633;
}

.emotion-18 .uc-fe-tree-item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #0a1633;
  min-height: 36px;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent {
  width: 32px;
  position: relative;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner::after {
  content: ' ';
  box-sizing: border-box;
  display: inline-block;
  height: 100%;
  width: 1px;
  border-left: 1px solid #d2d6ea;
  margin-left: 50%;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner.uc-fe-tree-latest::after {
  height: 50%;
  width: 4px;
  border-bottom: 1px solid #d2d6ea;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 8px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap:hover {
  background: #F4F6FF;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap .uc-fe-tree-content {
  margin-left: 8px;
}

.emotion-18 .uc-fe-tree-item.uc-fe-tree-disabled {
  color: #cccccc;
}

.emotion-18 .uc-fe-tree-item.uc-fe-tree-disabled .uc-fe-tree-wrap {
  cursor: default;
}

.emotion-18.uc-fe-tree-single .uc-fe-tree-item.uc-fe-tree-selected {
  color: #3860f4;
}

.emotion-18 .uc-fe-tree-expand-ph,
.emotion-18 .uc-fe-tree-expand-icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  line-height: 16px;
  margin-right: 8px;
}

.emotion-18 .uc-fe-tree-expand-icon {
  text-align: center;
  cursor: pointer;
  color: #526075;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.emotion-18 .uc-fe-tree-expand-icon.uc-fe-tree-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-18 .uc-fe-tree-expand-icon.uc-fe-tree-expanded {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-2 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-2 > * {
  font-size: 12px;
}

.emotion-2 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-2 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-2 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-2:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-2.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: none;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-4 {
  display: none;
}

.emotion-18 {
  background: transparent;
  color: #0a1633;
}

.emotion-18 .uc-fe-tree-item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #0a1633;
  min-height: 36px;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent {
  width: 32px;
  position: relative;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner::after {
  content: ' ';
  box-sizing: border-box;
  display: inline-block;
  height: 100%;
  width: 1px;
  border-left: 1px solid #d2d6ea;
  margin-left: 50%;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner.uc-fe-tree-latest::after {
  height: 50%;
  width: 4px;
  border-bottom: 1px solid #d2d6ea;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 8px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap:hover {
  background: #F4F6FF;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap .uc-fe-tree-content {
  margin-left: 8px;
}

.emotion-18 .uc-fe-tree-item.uc-fe-tree-disabled {
  color: #cccccc;
}

.emotion-18 .uc-fe-tree-item.uc-fe-tree-disabled .uc-fe-tree-wrap {
  cursor: default;
}

.emotion-18.uc-fe-tree-single .uc-fe-tree-item.uc-fe-tree-selected {
  color: #3860f4;
}

.emotion-18 .uc-fe-tree-expand-ph,
.emotion-18 .uc-fe-tree-expand-icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  line-height: 16px;
  margin-right: 8px;
}

.emotion-18 .uc-fe-tree-expand-icon {
  text-align: center;
  cursor: pointer;
  color: #526075;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.emotion-18 .uc-fe-tree-expand-icon.uc-fe-tree-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-18 .uc-fe-tree-expand-icon.uc-fe-tree-expanded {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-2 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-2 > * {
  font-size: 12px;
}

.emotion-2 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-2 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-2 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-2:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-2.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: none;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-4 {
  display: none;
}

<div
  class="uc-fe-tree uc-fe-tree-multiple emotion-18 emotion-19"
>
  <div>
    <div>
      <div
        class="uc-fe-tree-item"
      >
        <div
          class="uc-fe-tree-wrap"
        >
          <span
            class="uc-fe-tree-expand-icon"
          >
            ▶
          </span>
          <span
            class="uc-fe-checkbox emotion-2 emotion-3"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-0 emotion-1"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="uc-fe-tree-content"
          >
            root-0-item
          </span>
        </div>
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    />
  </div>
  <div>
    <div>
      <div
        class="uc-fe-tree-item"
      >
        <div
          class="uc-fe-tree-wrap"
        >
          <span
            class="uc-fe-tree-expand-icon"
          >
            ▶
          </span>
          <span
            class="uc-fe-checkbox emotion-2 emotion-3"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-0 emotion-1"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="uc-fe-tree-content"
          >
            root-1-item
          </span>
        </div>
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    />
  </div>
  <div>
    <div>
      <div
        class="uc-fe-tree-item"
      >
        <div
          class="uc-fe-tree-wrap"
        >
          <span
            class="uc-fe-tree-expand-icon"
          >
            ▶
          </span>
          <span
            class="uc-fe-checkbox emotion-2 emotion-3"
          >
            <span
              class="uc-fe-checkbox-icon-wrap"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-0 emotion-1"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="uc-fe-tree-content"
          >
            root-2-item
          </span>
        </div>
      </div>
    </div>
    <div
      class="emotion-4 emotion-5"
    />
  </div>
</div>
`;

exports[`Tree demo -- bigData 1`] = `
Array [
  .emotion-2 > .uc-fe-combine-item,
.emotion-2 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-2 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-2 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-2 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-2 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-2 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-2 > .uc-fe-combine-item,
.emotion-2 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-2 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-2 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-2 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-2 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-2 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

<div
    class="uc-fe-combine emotion-2 emotion-3"
    spacing="md"
  >
    <div
      class="uc-fe-combine-item"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
        type="button"
      >
        Refresh
      </button>
    </div>
    <div
      class="uc-fe-combine-item"
    >
      <h2
        class=""
      >
        总计 6**6 = 46656 条数据
      </h2>
    </div>
  </div>,
  .emotion-36 {
  background: transparent;
  color: #0a1633;
}

.emotion-36 .uc-fe-tree-item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #0a1633;
  min-height: 36px;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-indent {
  width: 32px;
  position: relative;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner::after {
  content: ' ';
  box-sizing: border-box;
  display: inline-block;
  height: 100%;
  width: 1px;
  border-left: 1px solid #d2d6ea;
  margin-left: 50%;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner.uc-fe-tree-latest::after {
  height: 50%;
  width: 4px;
  border-bottom: 1px solid #d2d6ea;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-wrap {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 8px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-wrap:hover {
  background: #F4F6FF;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-wrap .uc-fe-tree-content {
  margin-left: 8px;
}

.emotion-36 .uc-fe-tree-item.uc-fe-tree-disabled {
  color: #cccccc;
}

.emotion-36 .uc-fe-tree-item.uc-fe-tree-disabled .uc-fe-tree-wrap {
  cursor: default;
}

.emotion-36.uc-fe-tree-single .uc-fe-tree-item.uc-fe-tree-selected {
  color: #3860f4;
}

.emotion-36 .uc-fe-tree-expand-ph,
.emotion-36 .uc-fe-tree-expand-icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  line-height: 16px;
  margin-right: 8px;
}

.emotion-36 .uc-fe-tree-expand-icon {
  text-align: center;
  cursor: pointer;
  color: #526075;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.emotion-36 .uc-fe-tree-expand-icon.uc-fe-tree-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-36 .uc-fe-tree-expand-icon.uc-fe-tree-expanded {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-2 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-2 > * {
  font-size: 12px;
}

.emotion-2 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-2 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-2 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-2:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-2.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: none;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-4 {
  display: none;
}

.emotion-36 {
  background: transparent;
  color: #0a1633;
}

.emotion-36 .uc-fe-tree-item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #0a1633;
  min-height: 36px;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-indent {
  width: 32px;
  position: relative;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner::after {
  content: ' ';
  box-sizing: border-box;
  display: inline-block;
  height: 100%;
  width: 1px;
  border-left: 1px solid #d2d6ea;
  margin-left: 50%;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner.uc-fe-tree-latest::after {
  height: 50%;
  width: 4px;
  border-bottom: 1px solid #d2d6ea;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-wrap {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 8px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-wrap:hover {
  background: #F4F6FF;
}

.emotion-36 .uc-fe-tree-item .uc-fe-tree-wrap .uc-fe-tree-content {
  margin-left: 8px;
}

.emotion-36 .uc-fe-tree-item.uc-fe-tree-disabled {
  color: #cccccc;
}

.emotion-36 .uc-fe-tree-item.uc-fe-tree-disabled .uc-fe-tree-wrap {
  cursor: default;
}

.emotion-36.uc-fe-tree-single .uc-fe-tree-item.uc-fe-tree-selected {
  color: #3860f4;
}

.emotion-36 .uc-fe-tree-expand-ph,
.emotion-36 .uc-fe-tree-expand-icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  line-height: 16px;
  margin-right: 8px;
}

.emotion-36 .uc-fe-tree-expand-icon {
  text-align: center;
  cursor: pointer;
  color: #526075;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.emotion-36 .uc-fe-tree-expand-icon.uc-fe-tree-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-36 .uc-fe-tree-expand-icon.uc-fe-tree-expanded {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-2 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-2 > * {
  font-size: 12px;
}

.emotion-2 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-2 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-2 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-2:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-2.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: none;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-4 {
  display: none;
}

<div
    class="uc-fe-tree uc-fe-tree-multiple emotion-36 emotion-37"
  >
    <div>
      <div>
        <div
          class="uc-fe-tree-item"
        >
          <div
            class="uc-fe-tree-wrap"
          >
            <span
              class="uc-fe-tree-expand-icon"
            >
              ▶
            </span>
            <span
              class="uc-fe-checkbox emotion-2 emotion-3"
            >
              <span
                class="uc-fe-checkbox-icon-wrap"
              >
                <svg
                  class="uc-fe-checkbox-icon emotion-0 emotion-1"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="uc-fe-tree-content"
            >
              root-0-item
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-4 emotion-5"
      />
    </div>
    <div>
      <div>
        <div
          class="uc-fe-tree-item"
        >
          <div
            class="uc-fe-tree-wrap"
          >
            <span
              class="uc-fe-tree-expand-icon"
            >
              ▶
            </span>
            <span
              class="uc-fe-checkbox emotion-2 emotion-3"
            >
              <span
                class="uc-fe-checkbox-icon-wrap"
              >
                <svg
                  class="uc-fe-checkbox-icon emotion-0 emotion-1"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="uc-fe-tree-content"
            >
              root-1-item
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-4 emotion-5"
      />
    </div>
    <div>
      <div>
        <div
          class="uc-fe-tree-item"
        >
          <div
            class="uc-fe-tree-wrap"
          >
            <span
              class="uc-fe-tree-expand-icon"
            >
              ▶
            </span>
            <span
              class="uc-fe-checkbox emotion-2 emotion-3"
            >
              <span
                class="uc-fe-checkbox-icon-wrap"
              >
                <svg
                  class="uc-fe-checkbox-icon emotion-0 emotion-1"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="uc-fe-tree-content"
            >
              root-2-item
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-4 emotion-5"
      />
    </div>
    <div>
      <div>
        <div
          class="uc-fe-tree-item"
        >
          <div
            class="uc-fe-tree-wrap"
          >
            <span
              class="uc-fe-tree-expand-icon"
            >
              ▶
            </span>
            <span
              class="uc-fe-checkbox emotion-2 emotion-3"
            >
              <span
                class="uc-fe-checkbox-icon-wrap"
              >
                <svg
                  class="uc-fe-checkbox-icon emotion-0 emotion-1"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="uc-fe-tree-content"
            >
              root-3-item
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-4 emotion-5"
      />
    </div>
    <div>
      <div>
        <div
          class="uc-fe-tree-item"
        >
          <div
            class="uc-fe-tree-wrap"
          >
            <span
              class="uc-fe-tree-expand-icon"
            >
              ▶
            </span>
            <span
              class="uc-fe-checkbox emotion-2 emotion-3"
            >
              <span
                class="uc-fe-checkbox-icon-wrap"
              >
                <svg
                  class="uc-fe-checkbox-icon emotion-0 emotion-1"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="uc-fe-tree-content"
            >
              root-4-item
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-4 emotion-5"
      />
    </div>
    <div>
      <div>
        <div
          class="uc-fe-tree-item"
        >
          <div
            class="uc-fe-tree-wrap"
          >
            <span
              class="uc-fe-tree-expand-icon"
            >
              ▶
            </span>
            <span
              class="uc-fe-checkbox emotion-2 emotion-3"
            >
              <span
                class="uc-fe-checkbox-icon-wrap"
              >
                <svg
                  class="uc-fe-checkbox-icon emotion-0 emotion-1"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="uc-fe-tree-content"
            >
              root-5-item
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-4 emotion-5"
      />
    </div>
  </div>,
]
`;

exports[`Tree demo -- method 1`] = `
Array [
  .emotion-6 > .uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-6 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-6 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-6 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-6 > .uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-separator {
  vertical-align: middle;
  display: inline-block;
}

.emotion-6 > .uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-6 > .uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-6 > .uc-fe-combine-item+.uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-separator+.uc-fe-combine-item,
.emotion-6 > .uc-fe-combine-item+.uc-fe-combine-separator {
  margin-left: 8px;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

<div
    class="uc-fe-combine emotion-6 emotion-7"
    spacing="md"
  >
    <div
      class="uc-fe-combine-item"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
        type="button"
      >
        全选
      </button>
    </div>
    <div
      class="uc-fe-combine-item"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
        type="button"
      >
        反选
      </button>
    </div>
    <div
      class="uc-fe-combine-item"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
        type="button"
      >
        取消选择
      </button>
    </div>
  </div>,
  .emotion-18 {
  background: transparent;
  color: #0a1633;
}

.emotion-18 .uc-fe-tree-item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #0a1633;
  min-height: 36px;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent {
  width: 32px;
  position: relative;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner::after {
  content: ' ';
  box-sizing: border-box;
  display: inline-block;
  height: 100%;
  width: 1px;
  border-left: 1px solid #d2d6ea;
  margin-left: 50%;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner.uc-fe-tree-latest::after {
  height: 50%;
  width: 4px;
  border-bottom: 1px solid #d2d6ea;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 8px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap:hover {
  background: #F4F6FF;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap .uc-fe-tree-content {
  margin-left: 8px;
}

.emotion-18 .uc-fe-tree-item.uc-fe-tree-disabled {
  color: #cccccc;
}

.emotion-18 .uc-fe-tree-item.uc-fe-tree-disabled .uc-fe-tree-wrap {
  cursor: default;
}

.emotion-18.uc-fe-tree-single .uc-fe-tree-item.uc-fe-tree-selected {
  color: #3860f4;
}

.emotion-18 .uc-fe-tree-expand-ph,
.emotion-18 .uc-fe-tree-expand-icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  line-height: 16px;
  margin-right: 8px;
}

.emotion-18 .uc-fe-tree-expand-icon {
  text-align: center;
  cursor: pointer;
  color: #526075;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.emotion-18 .uc-fe-tree-expand-icon.uc-fe-tree-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-18 .uc-fe-tree-expand-icon.uc-fe-tree-expanded {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-2 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-2 > * {
  font-size: 12px;
}

.emotion-2 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-2 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-2 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-2:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-2.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: none;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-4 {
  display: none;
}

.emotion-18 {
  background: transparent;
  color: #0a1633;
}

.emotion-18 .uc-fe-tree-item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #0a1633;
  min-height: 36px;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent {
  width: 32px;
  position: relative;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner::after {
  content: ' ';
  box-sizing: border-box;
  display: inline-block;
  height: 100%;
  width: 1px;
  border-left: 1px solid #d2d6ea;
  margin-left: 50%;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner.uc-fe-tree-latest::after {
  height: 50%;
  width: 4px;
  border-bottom: 1px solid #d2d6ea;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 8px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap:hover {
  background: #F4F6FF;
}

.emotion-18 .uc-fe-tree-item .uc-fe-tree-wrap .uc-fe-tree-content {
  margin-left: 8px;
}

.emotion-18 .uc-fe-tree-item.uc-fe-tree-disabled {
  color: #cccccc;
}

.emotion-18 .uc-fe-tree-item.uc-fe-tree-disabled .uc-fe-tree-wrap {
  cursor: default;
}

.emotion-18.uc-fe-tree-single .uc-fe-tree-item.uc-fe-tree-selected {
  color: #3860f4;
}

.emotion-18 .uc-fe-tree-expand-ph,
.emotion-18 .uc-fe-tree-expand-icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  line-height: 16px;
  margin-right: 8px;
}

.emotion-18 .uc-fe-tree-expand-icon {
  text-align: center;
  cursor: pointer;
  color: #526075;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.emotion-18 .uc-fe-tree-expand-icon.uc-fe-tree-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-18 .uc-fe-tree-expand-icon.uc-fe-tree-expanded {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-2 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-2 > * {
  font-size: 12px;
}

.emotion-2 .uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-2 .uc-fe-checkbox-icon-wrap .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-2 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-2:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-2.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-2.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled .uc-fe-checkbox-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon {
  fill: #cccccc;
}

.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-checked .uc-fe-checkbox-icon-wrap,
.emotion-2.uc-fe-checkbox-disabled.uc-fe-checkbox-indeterminate .uc-fe-checkbox-icon-wrap {
  background: none;
}

.emotion-0 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-4 {
  display: none;
}

<div
    class="uc-fe-tree uc-fe-tree-multiple emotion-18 emotion-19"
  >
    <div>
      <div>
        <div
          class="uc-fe-tree-item"
        >
          <div
            class="uc-fe-tree-wrap"
          >
            <span
              class="uc-fe-tree-expand-icon"
            >
              ▶
            </span>
            <span
              class="uc-fe-checkbox emotion-2 emotion-3"
            >
              <span
                class="uc-fe-checkbox-icon-wrap"
              >
                <svg
                  class="uc-fe-checkbox-icon emotion-0 emotion-1"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="uc-fe-tree-content"
            >
              root-0-item
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-4 emotion-5"
      />
    </div>
    <div>
      <div>
        <div
          class="uc-fe-tree-item"
        >
          <div
            class="uc-fe-tree-wrap"
          >
            <span
              class="uc-fe-tree-expand-icon"
            >
              ▶
            </span>
            <span
              class="uc-fe-checkbox emotion-2 emotion-3"
            >
              <span
                class="uc-fe-checkbox-icon-wrap"
              >
                <svg
                  class="uc-fe-checkbox-icon emotion-0 emotion-1"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="uc-fe-tree-content"
            >
              root-1-item
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-4 emotion-5"
      />
    </div>
    <div>
      <div>
        <div
          class="uc-fe-tree-item"
        >
          <div
            class="uc-fe-tree-wrap"
          >
            <span
              class="uc-fe-tree-expand-icon"
            >
              ▶
            </span>
            <span
              class="uc-fe-checkbox emotion-2 emotion-3"
            >
              <span
                class="uc-fe-checkbox-icon-wrap"
              >
                <svg
                  class="uc-fe-checkbox-icon emotion-0 emotion-1"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="uc-fe-tree-content"
            >
              root-2-item
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-4 emotion-5"
      />
    </div>
  </div>,
]
`;

exports[`Tree demo -- tree 1`] = `
.emotion-41 {
  background: transparent;
  color: #0a1633;
}

.emotion-41 .uc-fe-tree-item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #0a1633;
  min-height: 36px;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-indent {
  width: 32px;
  position: relative;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner::after {
  content: ' ';
  box-sizing: border-box;
  display: inline-block;
  height: 100%;
  width: 1px;
  border-left: 1px solid #d2d6ea;
  margin-left: 50%;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner.uc-fe-tree-latest::after {
  height: 50%;
  width: 4px;
  border-bottom: 1px solid #d2d6ea;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-wrap {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 8px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-wrap:hover {
  background: #F4F6FF;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-wrap .uc-fe-tree-content {
  margin-left: 8px;
}

.emotion-41 .uc-fe-tree-item.uc-fe-tree-disabled {
  color: #cccccc;
}

.emotion-41 .uc-fe-tree-item.uc-fe-tree-disabled .uc-fe-tree-wrap {
  cursor: default;
}

.emotion-41.uc-fe-tree-single .uc-fe-tree-item.uc-fe-tree-selected {
  color: #3860f4;
}

.emotion-41 .uc-fe-tree-expand-ph,
.emotion-41 .uc-fe-tree-expand-icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  line-height: 16px;
  margin-right: 8px;
}

.emotion-41 .uc-fe-tree-expand-icon {
  text-align: center;
  cursor: pointer;
  color: #526075;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.emotion-41 .uc-fe-tree-expand-icon.uc-fe-tree-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-41 .uc-fe-tree-expand-icon.uc-fe-tree-expanded {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-35 {
  display: none;
}

.emotion-25 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-25:link,
.emotion-25:visited {
  color: #0a1633;
}

.emotion-25:hover,
.emotion-25:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-33 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-33 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-9 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-9:before,
.emotion-9:after {
  content: ' ';
  display: table;
}

.emotion-9:after {
  clear: both;
}

.emotion-9 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 78px;
  padding: 4px;
  border: 1px solid #d2d6ea;
  border-width: 1px;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 4px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 2px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  height: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3:hover {
  border-color: #3357df;
}

.emotion-3:hover .uc-fe-switch-button {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-3 .uc-fe-switch-button {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
  width: 20px;
  height: 20px;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3 .uc-fe-switch-inner {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #f6f6fb;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  line-height: 16px;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 20px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 20px;
}

.emotion-3 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-41 {
  background: transparent;
  color: #0a1633;
}

.emotion-41 .uc-fe-tree-item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #0a1633;
  min-height: 36px;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-indent {
  width: 32px;
  position: relative;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner::after {
  content: ' ';
  box-sizing: border-box;
  display: inline-block;
  height: 100%;
  width: 1px;
  border-left: 1px solid #d2d6ea;
  margin-left: 50%;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-indent.uc-fe-tree-indent-inner.uc-fe-tree-latest::after {
  height: 50%;
  width: 4px;
  border-bottom: 1px solid #d2d6ea;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-wrap {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 8px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-wrap:hover {
  background: #F4F6FF;
}

.emotion-41 .uc-fe-tree-item .uc-fe-tree-wrap .uc-fe-tree-content {
  margin-left: 8px;
}

.emotion-41 .uc-fe-tree-item.uc-fe-tree-disabled {
  color: #cccccc;
}

.emotion-41 .uc-fe-tree-item.uc-fe-tree-disabled .uc-fe-tree-wrap {
  cursor: default;
}

.emotion-41.uc-fe-tree-single .uc-fe-tree-item.uc-fe-tree-selected {
  color: #3860f4;
}

.emotion-41 .uc-fe-tree-expand-ph,
.emotion-41 .uc-fe-tree-expand-icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  line-height: 16px;
  margin-right: 8px;
}

.emotion-41 .uc-fe-tree-expand-icon {
  text-align: center;
  cursor: pointer;
  color: #526075;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.emotion-41 .uc-fe-tree-expand-icon.uc-fe-tree-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-41 .uc-fe-tree-expand-icon.uc-fe-tree-expanded {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-35 {
  display: none;
}

.emotion-25 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-25:link,
.emotion-25:visited {
  color: #0a1633;
}

.emotion-25:hover,
.emotion-25:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-33 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-33 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-9 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-9:before,
.emotion-9:after {
  content: ' ';
  display: table;
}

.emotion-9:after {
  clear: both;
}

.emotion-9 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 78px;
  padding: 4px;
  border: 1px solid #d2d6ea;
  border-width: 1px;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 4px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 2px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  height: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3:hover {
  border-color: #3357df;
}

.emotion-3:hover .uc-fe-switch-button {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-3 .uc-fe-switch-button {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
  width: 20px;
  height: 20px;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3 .uc-fe-switch-inner {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #f6f6fb;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  line-height: 16px;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 20px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 20px;
}

.emotion-3 .uc-fe-switch-tip-on {
  display: none;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-33 emotion-34"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        multiple
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class=" emotion-3 emotion-4"
        >
          <div
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
            <span
              class="uc-fe-switch-button"
            >
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class=" emotion-3 emotion-4"
        >
          <div
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
            <span
              class="uc-fe-switch-button"
            >
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        random
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-25 emotion-26"
          type="button"
        >
          Refresh
        </button>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-tree uc-fe-tree-single emotion-41 emotion-42"
    >
      <div>
        <div>
          <div
            class="uc-fe-tree-item"
          >
            <div
              class="uc-fe-tree-wrap"
            >
              <span
                class="uc-fe-tree-expand-icon"
              >
                ▶
              </span>
              <span
                class="uc-fe-tree-content"
              >
                root-0-item
              </span>
            </div>
          </div>
        </div>
        <div
          class="emotion-35 emotion-36"
        />
      </div>
      <div>
        <div>
          <div
            class="uc-fe-tree-item"
          >
            <div
              class="uc-fe-tree-wrap"
            >
              <span
                class="uc-fe-tree-expand-icon"
              >
                ▶
              </span>
              <span
                class="uc-fe-tree-content"
              >
                root-1-item
              </span>
            </div>
          </div>
        </div>
        <div
          class="emotion-35 emotion-36"
        />
      </div>
      <div>
        <div>
          <div
            class="uc-fe-tree-item"
          >
            <div
              class="uc-fe-tree-wrap"
            >
              <span
                class="uc-fe-tree-expand-icon"
              >
                ▶
              </span>
              <span
                class="uc-fe-tree-content"
              >
                root-2-item
              </span>
            </div>
          </div>
        </div>
        <div
          class="emotion-35 emotion-36"
        />
      </div>
    </div>
  </div>
</div>
`;
